small codacy fix